fix: integrate assistant navigation and validate native widget migration
Synchronize chat routes with native read-state gating, fix Android and Robolectric fixtures, isolate device test storage, and verify owned navigation recovery. Set assistant display names while retaining package and signing identity.

Verified 203 Robolectric checks, verify.ps1, Pi runtime tests, archive/schedule browser checks, and Android 16 emulator widget/share/voice/notification/navigation/Shower checks. HyperOS device acceptance remains untested.